--- a/AgentsApp/AgentsApp.csproj
+++ b/AgentsApp/AgentsApp.csproj
@@ -121,8 +121,10 @@
     </Compile>
     <Compile Include="Commands\DelegateCommand.cs" />
     <Compile Include="Commands\Navigation.cs" />
+    <Compile Include="Constants\StringConstants.cs" />
     <Compile Include="DataBase\AgentContext.cs" />
-    <Compile Include="Models\Agent.cs" />
+    <Compile Include="Models\AddOrEditAgentModel.cs" />
+    <Compile Include="Models\AgentModel.cs" />
     <Compile Include="ViewModels\AddOrEditAgentViewModel.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\MainPageViewModel.cs" />
@@ -140,6 +142,7 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Placeholder\Placeholder.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
